# FrameX

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  asv.conf.json  pyproject.toml
.github/workflows/: deploy-vercel.yml  publish-pypi.yml  release-pipeline.yml
benchmarks/: README.md  __init__.py  bench_memory.py  bench_ops.py  benchmark_suite.py  benchmarks.py  check_framex_workloads.py
benchmarks/results/: benchmark_report.md  benchmark_results.csv  benchmark_results.json  framex_workload_check.json
docs/: PYPI_RELEASE.md  benchmark-results.md  deep-research-matrix-dataframe.md
docs/documents/: api_reference.md  architecture.md  configuration_guide.md  faq.md  features.md  getting_started.md  installation.md  overview.md  performance_test.md  roadmap.md  sqlite_guide.md  tutorial_etl_pipeline.md  tutorial_numpy_array.md  use_cases.md
framex/: __init__.py  compat.py  config.py  pandas_engine.py
framex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
framex/backends/: __init__.py  array_accel.py  c_backend.py  c_kernels.c
framex/core/: __init__.py  array.py  dataframe.py  dtypes.py  index.py  series.py
framex/interchange/: __init__.py  dataframe_protocol.py  numpy_protocols.py
framex/io/: __init__.py  arrow_ipc.py  csv.py  file.py  json.py  parquet.py
framex/memory/: __init__.py  buffer.py  pool.py  transport.py
framex/ops/: __init__.py  elementwise.py  filter.py  groupby.py  join.py  projection.py  reduction.py  sort.py  window.py
framex/runtime/: __init__.py  executor.py  partition.py  scheduler.py  streaming.py  task.py
tests/: conftest.py  test.ipynb  test_array.py  test_c_backend.py  test_config.py  test_dataframe.py  test_interchange.py  test_io.py  test_memory.py  test_ops.py  test_runtime.py
tests/__pycache__/: test_array.TestParallelBlocks.test_jit_apply.locals.plus_one-165.py314.1.nbc  test_array.TestParallelBlocks.test_jit_apply.locals.plus_one-165.py314.nbi  test_array.TestParallelBlocks.test_jit_apply.locals.plus_one-171.py314.1.nbc  test_array.TestParallelBlocks.test_jit_apply.locals.plus_one-171.py314.nbi
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.js  page.js
website/src/app/benchmarks/: page.js
website/src/app/docs/: page.js
website/src/app/docs/[slug]/: page.js
website/src/components/: Mermaid.js
website/src/lib/: benchmarks.js  docs.js
