[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyframe-xpy"
version = "0.1.0"
description = "High-performance parallel dataframe and array processing with Arrow-backed storage"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "FrameX Contributors" }
]
keywords = ["dataframe", "array", "analytics", "arrow", "dask", "ray", "numpy", "parallel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pyarrow>=14.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
pandas_compat = [
  "pandas>=2.0",
]
distributed = [
  "dask[dataframe,distributed]>=2024.1.0",
  "ray[data]>=2.9.0",
]
accel = [
  "numexpr>=2.9",
  "numba>=0.59",
]
gpu = [
  "cupy-cuda12x>=13.0; platform_system!='Windows'",
]
ml_accel = [
  "torch>=2.2",
  "jax>=0.4.30",
]
pandas_fast = [
  "modin[ray]>=0.30",
]
dev = [
  "pytest>=7.0",
  "pytest-benchmark",
  "hypothesis",
]
bench = [
  "matplotlib>=3.8",
  "psutil>=5.9",
]
release = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/aeiwz/FrameX"
Repository = "https://github.com/aeiwz/FrameX"
Issues = "https://github.com/aeiwz/FrameX/issues"
Documentation = "https://github.com/aeiwz/FrameX/tree/main/docs"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["framex", "framex.*"]
exclude = ["tests", "tests.*", "benchmarks", "benchmarks.*"]

[tool.setuptools.package-data]
framex = [
  "backends/c_kernels.c",
]

[tool.setuptools.exclude-package-data]
"*" = ["*.so", "*.dylib", "*.pyd", "*.pyc", "__pycache__/*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
